--- a/index.html
+++ b/index.html
@@ -8,6 +8,51 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+  <div class="pimg1">
+    <div class="ptext">
+      <span class="border">
+        Parallax Website
+      </span>
+    </div>
+  </div>
 
+  <section class="section section-light">
+    <h2>Section One</h2>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut omnis cum delectus harum consectetur sed accusamus magni necessitatibus odio ab in error veniam, excepturi, dolorum, a incidunt rem nisi, illum suscipit soluta nulla facere. Atque perferendis necessitatibus alias commodi sequi aspernatur blanditiis iusto laborum reprehenderit eius beatae illo, fugiat voluptates maxime placeat, ullam nihil excepturi cupiditate doloribus tenetur saepe, mollitia neque. Doloremque similique autem, libero enim rerum corporis labore praesentium accusantium, rem veniam reprehenderit neque consequatur adipisci perferendis. Dolor repudiandae, nihil libero iusto accusantium sapiente ratione magni aperiam corrupti dicta rem eum quis doloremque eius, temporibus unde asperiores quibusdam consectetur!</p>
+  </section>
+
+  <div class="pimg2">
+    <div class="ptext">
+      <span class="border trans">
+        Image Two Text
+      </span>
+    </div>
+  </div>
+
+  <section class="section section-dark">
+    <h2>Section Two</h2>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis dolor eum, hic excepturi natus quibusdam libero, mollitia enim corporis sed cum quia. Esse, perferendis culpa facilis sit voluptatum aperiam dignissimos voluptate distinctio sequi quaerat incidunt ea maiores iusto eligendi, magnam veniam ex rerum dolore reprehenderit inventore error. Quaerat ea odit error id quae voluptatum deserunt alias ipsam praesentium magnam. Repellendus nam accusantium cupiditate, iusto maiores quia odio ea quam magni id quis provident quaerat aut necessitatibus fugit animi, non odit.</p>
+  </section>
+
+  <div class="pimg3">
+    <div class="ptext">
+      <span class="border trans">
+        Image Three Text
+      </span>
+    </div>
+  </div>
+
+  <section class="section section-dark">
+    <h2>Section Three</h2>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis dolor eum, hic excepturi natus quibusdam libero, mollitia enim corporis sed cum quia. Esse, perferendis culpa facilis sit voluptatum aperiam dignissimos voluptate distinctio sequi quaerat incidunt ea maiores iusto eligendi, magnam veniam ex rerum dolore reprehenderit inventore error. Quaerat ea odit error id quae voluptatum deserunt alias ipsam praesentium magnam. Repellendus nam accusantium cupiditate, iusto maiores quia odio ea quam magni id quis provident quaerat aut necessitatibus fugit animi, non odit.</p>
+  </section>
+
+  <div class="pimg1">
+    <div class="ptext">
+      <span class="border">
+        Wolf Media
+      </span>
+    </div>
+  </div>
 </body>
 </html>
